WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202387
clang-tidy: Fix unnecessary copying/ref churn of for loop variables in Tools
https://bugs.webkit.org/show_bug.cgi?id=202387
Summary
clang-tidy: Fix unnecessary copying/ref churn of for loop variables in Tools
David Kilzer (:ddkilzer)
Reported
2019-09-30 18:43:40 PDT
Running clang-tidy on Tools resulted in one potential performance improvement to prevent object copies or reference churn in for loop variables.
Attachments
Patch v1
(1.46 KB, patch)
2019-09-30 18:44 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2019-09-30 18:44:37 PDT
Created
attachment 379870
[details]
Patch v1
Radar WebKit Bug Importer
Comment 2
2019-10-01 01:20:23 PDT
<
rdar://problem/55869777
>
WebKit Commit Bot
Comment 3
2019-10-01 10:11:01 PDT
Comment on
attachment 379870
[details]
Patch v1 Clearing flags on attachment: 379870 Committed
r250562
: <
https://trac.webkit.org/changeset/250562
>
WebKit Commit Bot
Comment 4
2019-10-01 10:11:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug