clang-tidy: Fix unnecessary copying/ref churn of for loop variables in Tools <https://webkit.org/b/202387>

Reviewed by Darin Adler.

* WebKitTestRunner/cocoa/TestControllerCocoa.mm:
(WTR::TestController::setAllowedMenuActions): Make loop variable
a reference to fix unnecessary copying/ref churn.


Canonical link: https://commits.webkit.org/215933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250562 268f45cc-cd09-0410-ab3c-d52691b4dbfc